@@ -17,31 +17,31 @@ package org.datahem.processor.measurementprotocol.v2.utils;
 
 import java.nio.charset.StandardCharsets;
 
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.Collections;
-import java.util.stream.Stream;
-import java.util.Map;
+//import java.util.List;
+//import java.util.stream.Collectors;
+//import java.util.Collections;
+//import java.util.stream.Stream;
+//import java.util.Map;
 import java.util.HashMap;
-import java.util.Arrays;
-import java.util.ArrayList;
-import java.util.regex.Pattern;
-import java.util.regex.Matcher;
+//import java.util.Arrays;
+//import java.util.ArrayList;
+//import java.util.regex.Pattern;
+//import java.util.regex.Matcher;
 import java.util.Optional;
 
 import org.apache.beam.sdk.io.gcp.pubsub.PubsubMessage;
 
-import org.datahem.processor.measurementprotocol.v2.utils.*;
+//import org.datahem.processor.measurementprotocol.v2.utils.*;
 import org.datahem.processor.utils.FieldMapper;
 import org.datahem.protobuf.measurementprotocol.v2.*;
 
 import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.DateTimeFormatter;
-import org.joda.time.Instant;
+import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
 
-import java.net.URL;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -57,28 +57,24 @@ public class MeasurementProtocolBuilder{
 	private ExceptionEntity exceptionEntity = new ExceptionEntity();
     private ExperimentEntity experimentEntity = new ExperimentEntity();
     private ProductEntity productEntity = new ProductEntity();
+    private GeoEntity geoEntity = new GeoEntity();
     private TrafficSourceEntity trafficSourceEntity = new TrafficSourceEntity();
     private TransactionEntity transactionEntity = new TransactionEntity();
     private DeviceEntity deviceEntity = new DeviceEntity();
     private PromotionEntity promotionEntity = new PromotionEntity();
     private SocialEntity socialEntity = new SocialEntity();
     private LatencyEntity latencyEntity = new LatencyEntity();
+    private PropertyEntity propertyEntity = new PropertyEntity();
+    private AttributesEntity attributesEntity = new AttributesEntity();
+    private TimeEntity timeEntity = new TimeEntity();
 
-
-    /*
-	
-	
-	private SiteSearchEntity siteSearchEntity = new SiteSearchEntity();
-    */
-    
     private static String excludedBotsPattern;
     private static String includedHostnamesPattern;
     private static String timeZone;
     
     public MeasurementProtocolBuilder(){
 	}
-	
-	
+		
   	public String getSearchEnginesPattern(){
     	return this.trafficSourceEntity.getSearchEnginesPattern();
   	}
@@ -119,15 +115,14 @@ public class MeasurementProtocolBuilder{
     	this.includedHostnamesPattern = pattern;
   	}
   	
-  /*	
+  	
   	public String getSiteSearchPattern(){
-    	return this.siteSearchEntity.getSiteSearchPattern();
+    	return this.pageEntity.getSiteSearchPattern();
   	}
 
 	public void setSiteSearchPattern(String pattern){
-    	this.siteSearchEntity.setSiteSearchPattern(pattern);
-  	}
-*/  	
+    	this.pageEntity.setSiteSearchPattern(pattern);
+  	}  	
   	
   	public String getTimeZone(){
     	return this.timeZone;
@@ -135,107 +130,90 @@ public class MeasurementProtocolBuilder{
 
 	public void setTimeZone(String tz){
     	this.timeZone = tz;
+        this.timeEntity.setTimeZone(tz);
   	}
-
 
     public MeasurementProtocol measurementProtocolFromPayload(PubsubMessage message){
 		try{
             String payload = new String(message.getPayload(), StandardCharsets.UTF_8);
-	        LOG.info(payload);
             //Check if post body contains payload and add parameters in a map
 	        if (!"".equals(payload)) {
 	            //Add header parameters to pm
 	            pm = FieldMapper.fieldMapFromQuery(payload);
                 pm.putAll(message.getAttributeMap());
-	            //LOG.info(pm.toString());
 	            //Exclude bots, spiders and crawlers
 				if(pm.get("User-Agent") == null){
 					pm.put("User-Agent", "");
 				}
-
-	        	if(!pm.get("User-Agent").matches(getExcludedBotsPattern()) && pm.get("dl").matches(getIncludedHostnamesPattern()) && !pm.get("t").equals("adtiming")){
-	                //Add epochMillis and timestamp to pm       
-                    Instant payloadTimeStamp = new Instant(Long.parseLong(pm.get("MessageTimestamp")));
-					//DateTimeFormatter utc_timestamp = DateTimeFormat.forPattern("YYYY-MM-dd HH:mm:ss").withZoneUTC();
-					DateTimeFormatter local_timestamp = DateTimeFormat.forPattern("YYYY-MM-dd HH:mm:ss").withZone(DateTimeZone.forID(getTimeZone()));
-		            pm.put("cpts", payloadTimeStamp.toString(local_timestamp));
-                    pm.put("cpem", pm.get("MessageTimestamp"));
-
-					//Set local timezone for use as partition field
-					DateTimeFormatter partition = DateTimeFormat.forPattern("YYYY-MM-dd").withZone(DateTimeZone.forID(getTimeZone()));
-					pm.put("cpd", payloadTimeStamp.toString(partition));
-
+	        	if(!pm.get("User-Agent").matches(getExcludedBotsPattern()) && (pm.getOrDefault("dl","").matches(getIncludedHostnamesPattern()) || pm.getOrDefault("dh","").matches(getIncludedHostnamesPattern())) && !pm.get("t").equals("adtiming")){
                     try{
-                        //If document location parameter exist, extract host and path and add those as separate parameters
-                        if (pm.get("dh") != null && pm.get("dp") != null){
-                            pm.put("dlu",pm.get("dh") + pm.get("dp"));
-                        } else if(pm.get("dl") != null){
-                            URL url = new URL(pm.get("dl"));
-                            if(pm.get("dh")==null) pm.put("dh", url.getHost());
-                            if(pm.get("dp")==null) pm.put("dp", url.getPath());
-                            pm.put("dlu", url.getHost()+url.getFile());
-                        }
-                    }catch (MalformedURLException e) {
-                        LOG.error(e.toString() + " document location, pm:" + pm.toString());
+                        //If document location parameter exist, extract host and path and add those as separate parameters 
+                        URI uri = new URI(pm.get("dl").replace(" ", "%20")); // IE11 fix
+                        pm.put("dlh", uri.getHost());
+                        pm.put("dlp", (uri.getRawQuery() != null ? uri.getRawPath() + "?" + uri.getRawQuery() : uri.getRawPath()));
                     }
+                    catch (URISyntaxException e) {
+                        LOG.error("URISyntaxException (IE11 user agent?): ", e);
+                    }
+                    catch (NullPointerException e) {
+                        LOG.error("NullPointerException: ", e);
+		            }
+                    if(pm.get("dh") != null) pm.put("dlh", (pm.get("dh")));
+                    if(pm.get("dp") != null) pm.put("dlp", (pm.get("dp").replace(" ", "%20"))); // IE11 fix
+                    if(pm.get("dlh") != null && pm.get("dlp") != null) pm.put("dlu", pm.get("dlh") + pm.get("dlp"));
                     
                     try{
                         //If document referer parameter exist, extract host and path and add those as separate parameters
-                        if(pm.get("dr") != null){
-                            URL referer = new URL(pm.get("dr"));
+                        if(pm.get("dr") != null && !pm.get("dr").equals("(not set)")){
+                            URI referer = new URI(pm.get("dr"));
                             pm.put("drh", referer.getHost());
-                            pm.put("drp", referer.getPath());
+                            pm.put("drp", referer.getRawPath());
                         }
-                    }catch (MalformedURLException e) {
-                        LOG.error(e.toString() + " referer, pm:" + pm.toString());
                     }
-					
+                    catch (URISyntaxException e) {
+                        LOG.error("MalformedURLException: ", e);
+                    }
+                    catch (NullPointerException e) {
+                        LOG.error("NullPointerException: ", e);
+		            }
                     MeasurementProtocol.Builder builder = MeasurementProtocol.newBuilder();
                     Optional.ofNullable(pm.get("t")).ifPresent(builder::setHitType);
                     Optional.ofNullable(pm.get("cid")).ifPresent(builder::setClientId);
                     Optional.ofNullable(pm.get("uid")).ifPresent(builder::setUserId);
-                    Optional.ofNullable(pm.get("MessageUuid")).ifPresent(builder::setHitId);
                     Optional.ofNullable(pm.get("v")).ifPresent(builder::setVersion);
                     FieldMapper.intVal(pm.get("ni")).ifPresent(g -> builder.setNonInteraction(g.intValue()));
-                    
+                    //Set local timezone for use as partition field
+					DateTimeFormatter partition = DateTimeFormat.forPattern("YYYY-MM-dd").withZone(DateTimeZone.forID(getTimeZone()));
+                    Optional.ofNullable(DateTime.parse(pm.get("timestamp")).toString(partition)).ifPresent(builder::setDate);
                     Optional.ofNullable(pageEntity.build((HashMap)pm.clone())).ifPresent(builder::setPage);
                     Optional.ofNullable(eventEntity.build((HashMap)pm.clone())).ifPresent(builder::setEvent);
                     Optional.ofNullable(exceptionEntity.build((HashMap)pm.clone())).ifPresent(builder::setException);
-                    Optional.ofNullable(experimentEntity.build((HashMap)pm.clone())).ifPresent(builder::addAllExperiment);
-                    Optional.ofNullable(productEntity.build((HashMap)pm.clone())).ifPresent(builder::addAllProducts);
+                    Optional.ofNullable(geoEntity.build((HashMap)pm.clone())).ifPresent(builder::setGeo);
+                    Optional.ofNullable(experimentEntity.build((HashMap)pm.clone())).ifPresent(builder::addAllExperiments);
                     Optional.ofNullable(trafficSourceEntity.build((HashMap)pm.clone())).ifPresent(builder::setTrafficSource);
                     Optional.ofNullable(transactionEntity.build((HashMap)pm.clone())).ifPresent(builder::setTransaction);
                     Optional.ofNullable(deviceEntity.build((HashMap)pm.clone())).ifPresent(builder::setDevice);
-                    Optional.ofNullable(promotionEntity.build((HashMap)pm.clone())).ifPresent(builder::addAllPromitions);
+                    Optional.ofNullable(promotionEntity.build((HashMap)pm.clone())).ifPresent(builder::addAllPromotions);
+                    Optional.ofNullable(productEntity.build((HashMap)pm.clone())).ifPresent(builder::addAllProducts);
                     Optional.ofNullable(socialEntity.build((HashMap)pm.clone())).ifPresent(builder::setSocial);
                     Optional.ofNullable(latencyEntity.build((HashMap)pm.clone())).ifPresent(builder::setLatency);
+                    Optional.ofNullable(propertyEntity.build((HashMap)pm.clone())).ifPresent(builder::setProperty);
+                    Optional.ofNullable(FieldMapper.getCustomDimensions((HashMap)pm.clone(), "^(cd[0-9]{1,3})$", "^cd([0-9]{1,3})$")).ifPresent(builder::addAllCustomDimensions);
+                    Optional.ofNullable(FieldMapper.getCustomMetrics((HashMap)pm.clone(),"^(cm[0-9]{1,3})$","^cm([0-9]{1,3})$")).ifPresent(builder::addAllCustomMetrics);
+                    Optional.ofNullable(attributesEntity.build((HashMap)pm.clone())).ifPresent(builder::setATTRIBUTES);
+                    Optional.ofNullable(timeEntity.build((HashMap)pm.clone())).ifPresent(builder::setTime);
 
                     MeasurementProtocol measurementProtocol = builder.build();
-                    LOG.info(measurementProtocol.toString());
+                    //LOG.info(measurementProtocol.toString());
                     return measurementProtocol; 
-                    /*
-					addAllIfNotNull(events, pageviewEntity.build(pm));
-                    addAllIfNotNull(events, eventEntity.build(pm));
-                    addAllIfNotNull(events, exceptionEntity.build(pm));
-					addAllIfNotNull(events, siteSearchEntity.build(pm));
-					addAllIfNotNull(events, socialEntity.build(pm));
-					addAllIfNotNull(events, timingEntity.build(pm));
-					addAllIfNotNull(events, transactionEntity.build(pm));
-					addAllIfNotNull(events, productEntity.build(pm));
-					addAllIfNotNull(events, trafficEntity.build(pm));
-					addAllIfNotNull(events, promotionEntity.build(pm));
-					addAllIfNotNull(events, productImpressionEntity.build(pm));
-					addAllIfNotNull(events, experimentEntity.build(pm));
-                    */
-				}
-	        }else{
-                LOG.info("not matching MeasurementProtocolBuilder conditions: User-Agent: " + pm.getOrDefault("User-Agent", "null") + ", document.location: " + pm.getOrDefault("dl", "null") + ", type:" + pm.getOrDefault("t", "null"));
-            }
+                }else{
+                    //LOG.info("not matching MeasurementProtocolBuilder conditions: User-Agent: " + pm.getOrDefault("User-Agent", "null") + ", document.location: " + pm.getOrDefault("dl", "null") + ", type:" + pm.getOrDefault("t", "null"));
+                    }
+            }else{LOG.info("no message payload");}
         }
         catch (NullPointerException e) {
-				LOG.error(e.toString());// + " pm:" + pm.toString());
+                LOG.error("NullPointerException: ", e);
 		}
     	return null;   
-    }
-        
+    }       
 }
